Fix navvar on mobile

--- a/src/view/Components/navbar/style.scss
+++ b/src/view/Components/navbar/style.scss
@@ -42,7 +42,7 @@
     }
 
     a.navbar-brand {
-        width: 50%;
+        width: 60%;
         text-align: left;
     }
 
@@ -73,9 +73,9 @@
         background-image: url("../../../assets/nav_open.png") !important;
     }
 
-    .navbar-light .navbar-toggler-icon {
-        background-image: url("../../../assets/nav_close.png") !important;
-    }
+    // .navbar-light .navbar-toggler-icon {
+    //     background-image: url("../../../assets/nav_close.png") !important;
+    // }
 
     .block_header--wrapper .banner {
         margin: 20% auto !important;
